# light_board

./: CMakeLists.txt  LICENSE  Makefile  README.md
bmptk/: Makefile.inc  Makefile.local
bmptk/tools/check_serial_port/: check_serial_port  check_serial_port.c
docs/: Doxyfile
docs/html/: annotated.html  classes.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  files.html  functions.html  functions_func.html  functions_vars.html  index.html  menudata.js
docs/html/d0/d32/: classColor-members.html
docs/html/d0/d63/: light__board_8h_source.html
docs/html/d2/d37/: classColor.html
docs/html/d2/d66/: led__strip_8cpp_source.html
docs/html/d2/dda/: ADXL335_8h_source.html
docs/html/d2/dfb/: classADXL335.html
docs/html/d3/d03/: color_8cpp_source.html
docs/html/d3/d0c/: ADXL335_8cpp_source.html
docs/html/d3/dbc/: highscore__controller_8h_source.html
docs/html/d5/d24/: classhighscore__controller.html
docs/html/d6/d3c/: structRGB.html
docs/html/d7/d1b/: classHCSR04-members.html
docs/html/d8/d1c/: classhighscore__controller-members.html
docs/html/d8/d48/: structRGB-members.html
docs/html/d8/db6/: classlight__board.html
docs/html/d8/dbc/: classlight__board-members.html
docs/html/d9/d46/: HCSR04_8h_source.html
docs/html/d9/d4b/: HCSR04_8cpp_source.html
docs/html/da/dce/: classled__strip-members.html
docs/html/da/ddb/: light__board_8cpp_source.html
docs/html/da/dec/: color_8h_source.html
docs/html/db/d16/: config_8h_source.html
docs/html/dc/d97/: classHCSR04.html
docs/html/dd/de2/: highscore__controller_8cpp_source.html
docs/html/de/d0f/: classled__strip.html
docs/html/de/d30/: classADXL335-members.html
docs/html/search/: all_0.js  all_1.js  all_2.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  functions_0.js  functions_1.js  functions_3.js  functions_5.js  functions_6.js  functions_7.js  functions_8.js  pages_0.js  searchdata.js  variables_0.js  variables_1.js  variables_3.js  variables_4.js  variables_5.js  variables_6.js  variables_7.js  variables_8.js  variables_9.js  variables_a.js  variables_c.js  variables_d.js  variables_e.js
docs/latex/: annotated.tex  dir_68267d1309a1af8e8297ef4c3efbcdba.tex  index.tex  refman.tex
docs/latex/d2/d37/: classColor.tex
src/: ADXL335.cpp  ADXL335.h  HCSR04.cpp  HCSR04.h  color.cpp  color.h  config.h  highscore_controller.cpp  highscore_controller.h  led_strip.cpp  led_strip.h  light_board.cpp  light_board.h  main.cpp
(+13 files in other folders)
